Maven project + Java 25