@@ -1,6 +1,9 @@
 package Catan;
 
+import java.awt.Desktop;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /*
  * Note - you must include the url type -- either "http://" or
@@ -12,11 +15,29 @@ public class BrowserControl
      * Display a file in the system browser.  If you want to display a
      * file, you must include the absolute path name.
      *
-     * @param url the file's url (the url must start with either "http://"
-or
+     * @param url the file's url (the url must start with either "http://" or
      * "file://").
      */
     public static void displayURL(String url)
+    {
+        try
+        {
+            if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE))
+            {
+                Desktop.getDesktop().browse(new URI(url));
+                return;
+            }
+        }
+        catch (IOException | URISyntaxException | UnsupportedOperationException x)
+        {
+            showUrlFallback(url, x);
+            return;
+        }
+
+        launchBrowserFallback(url);
+    }
+
+    private static void launchBrowserFallback(String url)
     {
         boolean windows = isWindowsPlatform();
         String cmd = null;
@@ -24,56 +45,51 @@ or
         {
             if (windows)
             {
-                // cmd = 'rundll32 url.dll,FileProtocolHandler http://...'
                 cmd = WIN_PATH + " " + WIN_FLAG + " " + url;
-                Process p = Runtime.getRuntime().exec(cmd);
+                new ProcessBuilder(WIN_PATH, WIN_FLAG, url).start();
             }
             else
             {
-                // Under Unix, Netscape has to be running for the "-remote"
-                // command to work.  So, we try sending the command and
-                // check for an exit value.  If the exit command is 0,
-                // it worked, otherwise we need to start the browser.
-                // cmd = 'netscape -remote openURL(http://www.javaworld.com)'
-                cmd = UNIX_PATH + " " + UNIX_FLAG + "(" + url + ")";
-                Process p = Runtime.getRuntime().exec(cmd);
+                cmd = UNIX_PATH + " -remote openURL(" + url + ")";
+                Process p = new ProcessBuilder(UNIX_PATH, "-remote", "openURL(" + url + ")").start();
                 try
                 {
-                    // wait for exit code -- if it's 0, command worked,
-                    // otherwise we need to start the browser up.
                     int exitCode = p.waitFor();
                     if (exitCode != 0)
                     {
-                        // Command failed, start up the browser
-                        // cmd = 'netscape http://www.javaworld.com'
-                        cmd = UNIX_PATH + " "  + url;
-                        p = Runtime.getRuntime().exec(cmd);
+                        cmd = UNIX_PATH + " " + url;
+                        new ProcessBuilder(UNIX_PATH, url).start();
                     }
                 }
-                catch(InterruptedException x)
+                catch (InterruptedException x)
                 {
-                    MessageJDialog e = new MessageJDialog (null, true, false);
-
-                    e.setText(url, true);
-                    e.setVisible(true);
-            
+                    Thread.currentThread().interrupt();
+                    showUrlFallback(url, x);
                     System.err.println("Error bringing up browser, cmd='" + cmd + "'");
                     System.err.println("Caught: " + x);
                 }
             }
         }
-        catch(IOException x)
+        catch (IOException x)
         {
-            MessageJDialog e = new MessageJDialog (null, true, false);
-            
-            e.setText(url, true);
-            e.setVisible(true);
-            
-            // couldn't exec browser
+            showUrlFallback(url, x);
             System.err.println("Could not invoke browser, command=" + cmd);
             System.err.println("Caught: " + x);
         }
     }
+
+    private static void showUrlFallback(String url, Exception x)
+    {
+        MessageJDialog e = new MessageJDialog(null, true, false);
+        e.setText(url, true);
+        e.setVisible(true);
+        if (x != null)
+        {
+            System.err.println("Could not open browser for url=" + url);
+            System.err.println("Caught: " + x);
+        }
+    }
+
     /**
      * Try to determine whether this application is running under Windows
      * or some other platform by examing the "os.name" property.
@@ -83,11 +99,9 @@ or
     public static boolean isWindowsPlatform()
     {
         String os = System.getProperty("os.name");
-        if ( os != null && os.startsWith(WIN_ID))
-            return true;
-        else
-            return false;
+        return os != null && os.startsWith(WIN_ID);
     }
+
     /**
      * Simple example.
      */
@@ -95,6 +109,7 @@ or
     {
         displayURL("http://www.javaworld.com");
     }
+
     // Used to identify the windows platform.
     private static final String WIN_ID = "Windows";
     // The default system browser under windows.
